# hack-detector

./: .gitignore  README.md  pyproject.toml
config/: MONITORING_SOURCES.md  channels.yaml  channels.yaml.example
deploy/: hack-detector.service
migrations/: 002_incident_groups.sql  003_alert_system.sql  004_gemini_classification.sql  005_signal_triage.sql  006_alert_quarantine_gate.sql  007_hack_signal_quality_fields.sql
scripts/: deploy.sh  setup_twitter.py  sync-config.sh
src/: __init__.py  alerter.py  config.py  deduplicator.py  formatter.py  grouper.py  incident_classifier.py  logger.py  main.py  models.py  normalizer.py  notifier.py  scorer.py
src/classifiers/: gemini_classifier.py
src/extractors/: field_extractor.py  tweet_resolver.py
src/listeners/: telegram.py  twitter.py
src/storage/: supabase_store.py
tests/: __init__.py  e2e_harness.py  test_alert_quality_harness.py  test_alerter.py  test_field_extractor.py  test_gemini_classifier.py  test_grouped_incident_e2e.py  test_grouper.py  test_incident_classifier.py  test_scan_api_guardrails.py  test_scorer.py
